# tree-sitter-roxygen2

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  grammar.js.bck  grammar.js.bck2  grammars.js.bck4  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-roxygen2.pc.in
bindings/c/tree_sitter/: tree-sitter-roxygen2.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_roxygen2/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRoxygen2Tests/: TreeSitterRoxygen2Tests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
