[package]
name = "tree-sitter-roxygen2"
description = "roxygen2 grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["Jeffrey Owen Hanson <jeffrey.hanson@uqconnect.edu.au>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "roxygen2"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jeffreyhanson/tree-sitter-roxygen2"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
