[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-roxygen2"
description = "roxygen2 grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "roxygen2"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Jeffrey Owen Hanson", email = "jeffrey.hanson@uqconnect.edu.au" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/jeffreyhanson/tree-sitter-roxygen2"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
